--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src = "main.css"></script>
+    <title>MainPage</title>
 </head>
 <body>
-    <h1>你好!</h1>
+    <div class="top">
+        <h1>Computer Science Lessons and Projects</h1>
+    </div>
+    
     <ul>
         <li>
             <a href = "/Unit5Con/cond.html">Unit 5 : conditionals</a>
