--- a/Unit5Con/cond.html
+++ b/Unit5Con/cond.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main1.css">
+    <title>Unit 5</title>
 </head>
 <body>
-    <h1>Conditionals Lessons</h1>
+    <div class="top">
+        <h1>Conditionals Lessons</h1>
+    </div>
+    
     <ul>
         <li>Lesson 2 : If statements</li>
     </ul>
