--- a/Unit5Con/cond.html
+++ b/Unit5Con/cond.html
@@ -12,8 +12,11 @@
         <h1>Conditionals Lessons</h1>
     </div>
     
-    <ul>
+    <div class="lessonlist">
+        <ul>
         <li>Lesson 2 : If statements</li>
-    </ul>
+        </ul>
+    </div>
+    
 </body>
 </html>
