--- a/Unit5Con/if.html
+++ b/Unit5Con/if.html
@@ -4,21 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="if.js" defer></script>
     <link rel="stylesheet" href="cond.css">
-    <title>Unit 5</title>
+    <title>Lesson 2</title>
 </head>
 <body>
     <div class="top">
-        <h1>Conditionals Lessons</h1>
+        <h1>If Statments</h1>
     </div>
-    
-    <div class="lessonlist">
-        <ul>
-            <a href="if.html">
-                <li>Lesson 2 : If statements</li>
-            </a>
-        </ul>
-    </div>
-    
+    <p>Hint : look in console!</p>
+   
 </body>
 </html>
