--- a/Unit5Con/cond.html
+++ b/Unit5Con/cond.html
@@ -17,7 +17,14 @@
             <a href="if.html">
                 <li>Lesson 2 : If statements</li>
             </a>
-        </ul>
+            <a href="elseIf.html">
+                <li>Lesson 4 : Else If and Else statements</li>
+            </a>
+            <a href="guessAN.html">
+                <li>Lesson 4 : Guess a # "project"</li>
+            </a>
+
+        </ul> 
     </div>
     
 </body>
