--- a/Unit5Con/cond.html
+++ b/Unit5Con/cond.html
@@ -23,6 +23,12 @@
             <a href="guessAN.html">
                 <li>Lesson 4 : Guess a # "project"</li>
             </a>
+            <a href="nestedCond.html">
+                <li>Lesson 5 : Nested Conditionals"</li>
+            </a>
+            <a href="story.html">
+                <li>Lesson 5 : Story using Nested If statements"</li>
+            </a>
 
         </ul> 
     </div>
