--- a/Unit5Con/guessAN.html
+++ b/Unit5Con/guessAN.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="guessAN.js" defer></script>
     <link rel="stylesheet" href="cond.css">
-    <title>Document</title>
+    <title>Lesson 4</title>
 </head>
 <body>
     <div class="top">
         <h1>Guess the Number</h1>
     </div>
-    <p>Hint : look in console!</p>
+   
 </body>
 </html>
