--- a/Unit5Con/cond.html
+++ b/Unit5Con/cond.html
@@ -27,7 +27,7 @@
                 <li>Lesson 5 : Nested Conditionals"</li>
             </a>
             <a href="story.html">
-                <li>Lesson 5 : Story using Nested If statements"</li>
+                <li>Lesson 5 : Story using Nested If statements</li>
             </a>
 
         </ul> 
