--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <li>
             <a href = "/Unit5Con/cond.html">Unit 5 : conditionals</a>
         </li>
+        <li>
+            <a href = "/Unit6Functions/fun.html">Unit 6 : Functions</a>
+        </li>
         
     </ul>
 </body>
