--- a/Unit6Functions/introFun.html
+++ b/Unit6Functions/introFun.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="story.js" defer></script>
-    <link rel="stylesheet" href="cond.css">
-    <title>Unit 5 Lesson 5</title>
+    <link rel="stylesheet" href="fun.css">
+    <script src="introFun.js" defer></script>
+    <title>Unit 6 Lesson 1</title>
 </head>
 <body>
     <div class="top">
-        <h1>Story using nested conditionals</h1>
+        <h1>Intro to Functions</h1>
     </div>
-    <p>Hint : look in console!</p>
-   
+    
 </body>
 </html>
