--- a/Unit6Functions/fun.html
+++ b/Unit6Functions/fun.html
@@ -23,6 +23,9 @@
             <a href="lesson2Assign.html">
                 <li>Lesson 2 : Args and Paras assignment</li>
             </a>
+            <a href="returnState.html">
+                <li>Lesson 3 : Return statements</li>
+            </a>
             <!-- <a href="elseIf.html">
                 <li>Lesson 4 : Else If and Else statements</li>
             </a>
