--- a/Unit6Functions/fun.html
+++ b/Unit6Functions/fun.html
@@ -26,6 +26,12 @@
             <a href="returnState.html">
                 <li>Lesson 3 : Return statements</li>
             </a>
+            <a href="buttons.html">
+                <li>Lesson 4 : Buttons</li>
+            </a>
+            <a href="moreButtons.html">
+                <li>Lesson 5 : Calculator project</li>
+            </a>
             <!-- <a href="elseIf.html">
                 <li>Lesson 4 : Else If and Else statements</li>
             </a>
