--- a/Unit6Functions/moreButtons.html
+++ b/Unit6Functions/moreButtons.html
@@ -11,8 +11,42 @@
 <body>
     <div class="top">
         <h1>Calculator</h1>
-        
     </div>
+
+    
+
+    <!--FOR RECTANGLE-->
+    <h2>Area of a Rectangle</h2>
+    <!--Text area = spot user can put text in-->
+    length = <textarea id="rect-length" cols="5" rows="1"></textarea>
+    width = <textarea id="rect-width" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+    <button id="calc-rect-area">Calculate Area</button>
+    area = <textarea id="rect-area" cols="5" rows="1"></textarea>
+    <!--cols = # of char someone can write from left to right-->
+    <!--rows = # of lines from top to bot-->
+    <br>
+    <br>
+
+    <!--FOR SPHERE-->
+    <h2>Volume of Sphere</h2>
+    radius = <textarea id="sph-r" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+    <button id="calc-sph-vol">Calculate Volume</button>
+    volume = <textarea id="sph-vol" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+
+    <!--FOR CIRCLE-->
+    <h2>Area of a Circle</h2>
+    radius = <textarea id="cir-r" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+    <button id="calc-cir-area">Calculate Area</button>
+    area = <textarea id="cir-area" cols="5" rows="1"></textarea>
+ 
    
 </body>
 </html>
