added message to buttons

--- a/Unit6Functions/buttons.html
+++ b/Unit6Functions/buttons.html
@@ -16,5 +16,6 @@
     <button id="butt1">Click Me!</button> <!--to create a button-->
     <!--the id thing makes it so the js page can access the button-->
     <button id="butt2">No, Click Me!!</button>
+    <p>Hint : look in console!</p>
 </body>
 </html>
