added quadratic formula w/ imaginary!!

--- a/Unit6Functions/moreButtons.html
+++ b/Unit6Functions/moreButtons.html
@@ -46,6 +46,19 @@
     <br>
     <button id="calc-cir-area">Calculate Area</button>
     area = <textarea id="cir-area" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+
+    <!--FOR QUADRATIC EQUATION-->
+    <h2>Quadratic Formula</h2>
+    a = <textarea id="a" cols="5" rows="1"></textarea>
+    b = <textarea id="b" cols="5" rows="1"></textarea>
+    c = <textarea id="c" cols="5" rows="1"></textarea>
+    <br>
+    <br>
+    <button id="quad-calc">Calculate</button>
+    result when + = <textarea id="quad-result-add" cols="20" rows="1"></textarea>
+    result when - = <textarea id="quad-result-sub" cols="20" rows="1"></textarea>
  
    
 </body>
