added a for fun section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <li>
             <a href = "/Unit6Functions/fun.html">Unit 6 : Functions</a>
         </li>
+        <li>
+            <a href = "/ForFun/forFun.html">For Fun</a>
+        </li>
         
     </ul>
 </body>
