tried to work with the css to get boxes

--- a/ForFun/learnHtml.html
+++ b/ForFun/learnHtml.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link ref="Stylesheet" href="learnHtml.css">
+    <link rel="Stylesheet" href="learnHtml.css">
     <title>Messing with html and css</title>
 </head>
 <body>
