--- a/ForFun/learnHtml.html
+++ b/ForFun/learnHtml.html
@@ -10,17 +10,12 @@
 <body>
     <h1>Title</h1>
 
-    <div class="farLeft">
-        <h2>Box one</h2>
-    </div>
+    <div class="mainBox">
+        <h2 class="one">Box one</h2>
+        <h2 class = "two">HIIIII</h2>
+        <h2 class="three">does this do smthg??</h2>
 
-    <div class="mid">
-        <h2>Box two</h2>
-    </div>
-
-    <div class="farRight">
-        <h2>Box three</h2>
-    </div>
+   </div>
 
 </body>
 </html>
