finally figured out how to get evrything spaced!

--- a/ForFun/learnHtml.html
+++ b/ForFun/learnHtml.html
@@ -11,9 +11,11 @@
     <h1>Title</h1>
 
     <div class="mainBox">
-        <h2 class="one">Box one</h2>
-        <h2 class = "two">HIIIII</h2>
-        <h2 class="three">does this do smthg??</h2>
+       
+        <h2 class="left">Box one</h2>
+        
+        <h2 class = "mid">HIIIII</h2>
+        <h2 class="right">does this do smthg??</h2>
 
    </div>
 
