finished unit 2, started on unit 3

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <li>
             <a href = "/ForFun/forFun.html">For Fun</a>
         </li>
+        <li>
+            <a href = "/Unit2Block/Unit2.html">Unit 2 : Block Scope</a>
+        </li>
+        <li>
+            <a href = "/Unit3Arrays/Unit3.html">Unit 3 : Arrays</a>
+        </li>
         
     </ul>
 </body>
