--- a/Unit3Arrays/Unit3.html
+++ b/Unit3Arrays/Unit3.html
@@ -21,11 +21,41 @@
             <a href="Arrays1.js">
                 <li>Lesson 1 : Arrays (code)</li>
             </a>
-            <a href="vars.html">
-                <li>Lesson 2 : </li>
+            <a href="Arrays2.html">
+                <li>Lesson 2 : IndexOf</li>
             </a>
-            <a href="scope.js">
-                <li>Lesson 2 :  (code)</li>
+            <a href="Arrays2.js">
+                <li>Lesson 2 : IndexOf (code)</li>
+            </a>
+            <a href="Arrays3.html">
+                <li>Lesson 3 : Adding/removing</li>
+            </a>
+            <a href="Arrays3.js">
+                <li>Lesson 3 : Adding/removing (code)</li>
+            </a>
+            <a href="Arrays4.html">
+                <li>Lesson 4 : For Loops </li>
+            </a>
+            <a href="Arrays4.js">
+                <li>Lesson 4 : For Loops (code)</li>
+            </a>
+            <a href="Arrays5.html">
+                <li>Lesson 5 : While Loops </li>
+            </a>
+            <a href="Arrays5.js">
+                <li>Lesson 5 : While Loops (code)</li>
+            </a>
+            <a href="Arrays6.html">
+                <li>Lesson 6 : Looping through Array </li>
+            </a>
+            <a href="Arrays6.js">
+                <li>Lesson 6 : Looping through Array (code)</li>
+            </a>
+            <a href="Arrays7.html">
+                <li>Lesson 7 : Guessing Game </li>
+            </a>
+            <a href="Arrays7.js">
+                <li>Lesson 7 : Guessing Game (code)</li>
             </a>
 
         </ul>
