--- a/Unit4Objects/Unit4.html
+++ b/Unit4Objects/Unit4.html
@@ -18,6 +18,21 @@
             <a href="IntroObjects.html">
                 <li>Lesson 1 : Intro to objects</li>
             </a>
+            <a href="IntroObjects.js">
+                <li>Lesson 1 : Intro to objects (code)</li>
+            </a>
+            <a href="EditingObjs.html">
+                <li>Lesson 2 : Editing objects</li>
+            </a>
+            <a href="EditingObjs.js">
+                <li>Lesson 2 : Editing objects (code)</li>
+            </a>
+            <a href="JobProject.html">
+                <li>Lesson 3 : Job Applicant Project</li>
+            </a>
+            <a href="JobProject.js">
+                <li>Lesson 3 : Job Applicant Project (code)</li>
+            </a>
             
           
         </ul>
