--- a/Unit4Objects/FriendProject.html
+++ b/Unit4Objects/FriendProject.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="JobProject.js" defer></script>
+    <script src="FriendProject.js" defer></script>
     <link rel="stylesheet" href="Unit4.css">
-    <title>Unit 4 Lesson 3</title>
+    <title>Unit 4 Lesson 4</title>
 </head>
 <body>
     <div class="top">
-        <h1>Job Applicant Project</h1>
+        <h1>Friend App Coding Challenge </h1>
     </div>
     <p>Hint : look in console!</p>
 </body>
