--- a/Unit4Objects/Unit4.html
+++ b/Unit4Objects/Unit4.html
@@ -33,6 +33,12 @@
             <a href="JobProject.js">
                 <li>Lesson 3 : Job Applicant Project (code)</li>
             </a>
+            <a href="FriendProject.html">
+                <li>Lesson 4 : Friend App Coding Challenge</li>
+            </a>
+            <a href="FriendProject.js">
+                <li>Lesson 4 : Friend App Coding Challenge (code)</li>
+            </a>
             
           
         </ul>
