--- a/Unit5Classes/Classes.html
+++ b/Unit5Classes/Classes.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="IntroObjOriPro.js" defer></script>
+    <script src="Classes.js" defer></script>
     <link rel="stylesheet" href="Unit5.css">
-    <title>Unit 5 Lesson 1</title>
+    <title>Unit 5 Lesson 2</title>
 </head>
 <body>
     <div class="top">
-        <h1>Intro to Object Oriented Programming</h1>
+        <h1>Classes and Objects</h1>
     </div>
-    <p>Well there's no code for this lesson...</p>
     <p>Hint : look in console!</p>
 </body>
 </html>
