--- a/Unit5Classes/Unit5.html
+++ b/Unit5Classes/Unit5.html
@@ -21,6 +21,36 @@
             <a href="IntroObjOriPro.js">
                 <li>Lesson 1 : Intro to Obj Oriented Programming (code)</li>
             </a>
+            <a href="Classes.html">
+                <li>Lesson 2 : Classes and Objects</li>
+            </a>
+            <a href="Classes.js">
+                <li>Lesson 2 : Classes and Objects (code)</li>
+            </a>
+            <a href="PracClasses.html">
+                <li>Lesson 3 : Practicing Classes and Instances</li>
+            </a>
+            <a href="PracClasses.js">
+                <li>Lesson 3 : Practicing Classes and Instances (code)</li>
+            </a>
+            <a href="ClassMethods.html">
+                <li>Lesson 4 : Class Methods</li>
+            </a>
+            <a href="ClassMethods.js">
+                <li>Lesson 4 : Class Methods (code)</li>
+            </a>
+            <a href="Get&Set.html">
+                <li>Lesson 5 : Getters and Setters</li>
+            </a>
+            <a href="Get&Set.js">
+                <li>Lesson 5 : Getters and Setters (code)</li>
+            </a>
+            <a href="ObjAction.html">
+                <li>Lesson 6 : Object Interaction</li>
+            </a>
+            <a href="ObjAction.js">
+                <li>Lesson 6 : Object Interaction (code)</li>
+            </a>
             
           
         </ul>
