--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <li>
             <a href = "/Unit5Classes/Unit5.html">Unit 5 : Classes (Object Oriented Programming)</a>
         </li>
+        <li>
+            <a href = "/Unit6FinalProject/Unit6.html">Unit 6 : Final Project</a>
+        </li>
 
         
     </ul>
