--- a/Unit6FinalProject/project.html
+++ b/Unit6FinalProject/project.html
@@ -6,13 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="project.js" defer></script>
     <link rel="stylesheet" href="Unit6.css">
-    <title>Project</title>
+    <title>Book Log</title>
 </head>
 <body>
     <div class="top">
-        <h1>Final Project</h1>
+        <h1>Book Log</h1>
     </div>
-    <p>Hint : look in console!</p>
-   
+    <div class="addBook">
+    <h3>To Add a Book</h3>
+    <p>Please put the title of the book below</p>
+    <textarea id = "title" rows="1" cols="45"> </textarea>
+    <button type="buttonFortitle" onclick="(saveDataToFile);">Click to Save</button>
+
+    <p>Please put the author of the book below</p>
+    <textarea id = "title" rows="1" cols="45"> </textarea>
+
+    <p>Please put the rating (out of 5) you'd give the book below</p>
+    <textarea id = "title" rows="1" cols="45"> </textarea>
+</div>
+
+<div class="showBook">
+    <h3>To See a Book</h3>
+    <p>Please put the title of the book below</p>
+    <textarea id = "title" rows="1" cols="45"> </textarea>
+</div>
+
 </body>
 </html>
