--- a/Unit6FinalProject/project.html
+++ b/Unit6FinalProject/project.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="project.js" defer></script>
+    <script src="project2.js" defer></script>
     <link rel="stylesheet" href="Unit6.css">
     <title>Book Log</title>
 </head>
