--- a/Unit6FinalProject/Unit6.html
+++ b/Unit6FinalProject/Unit6.html
@@ -18,7 +18,7 @@
             <a href="project.html">
                 <li>Project</li>
             </a>
-            <a href="project.js">
+            <a href="project2.js">
                 <li>Project (code)</li>
             </a>
             <a href="brainstorming.txt">
